--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/hikeNameEditText"
+        android:id="@+id/editHike"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <EditText
-        android:id="@+id/locationEditText"
+        android:id="@+id/editLocation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -31,10 +31,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hikeNameEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/editHike" />
 
     <EditText
-        android:id="@+id/dateEditText"
+        android:id="@+id/editDate"
         android:layout_width="240dp"
         android:layout_height="49dp"
         android:layout_marginStart="12dp"
@@ -43,36 +43,36 @@
         android:focusable="false"
         android:hint="Date of the Hike"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/locationEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/editLocation" />
 
     <EditText
-        android:id="@+id/timeEditText"
+        android:id="@+id/editTime"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:clickable="true"
         android:focusable="false"
         android:hint="Time"
-        app:layout_constraintStart_toStartOf="@+id/dateEditText"
-        app:layout_constraintTop_toBottomOf="@+id/dateEditText" />
+        app:layout_constraintStart_toStartOf="@+id/editDate"
+        app:layout_constraintTop_toBottomOf="@+id/editDate" />
 
     <EditText
-        android:id="@+id/numberOfDaysEditText"
+        android:id="@+id/editNumber"
         android:layout_width="130dp"
         android:layout_height="49dp"
         android:hint="Days"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/locationEditText"
-        app:layout_constraintTop_toTopOf="@+id/timeEditText" />
+        app:layout_constraintEnd_toEndOf="@+id/editLocation"
+        app:layout_constraintTop_toTopOf="@+id/editTime" />
 
     <EditText
-        android:id="@+id/lengthEditText"
+        android:id="@+id/editLength"
         android:layout_width="372dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
         android:hint="Length the hike"
-        app:layout_constraintStart_toStartOf="@+id/timeEditText"
-        app:layout_constraintTop_toBottomOf="@+id/timeEditText" />
+        app:layout_constraintStart_toStartOf="@+id/editTime"
+        app:layout_constraintTop_toBottomOf="@+id/editTime" />
 
     <TextView
         android:id="@+id/parkingLabel"
@@ -82,7 +82,19 @@
         android:layout_marginTop="20dp"
         android:text="Parking Available:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lengthEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/editLength" />
+
+    <RadioGroup
+        android:id="@+id/parkingRadioGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toEndOf="@+id/parkingLabel"
+        app:layout_constraintTop_toBottomOf="@+id/editTime">
+
+    </RadioGroup>
 
     <TextView
         android:id="@+id/difficultyLabel"
@@ -108,7 +120,7 @@
     <!-- Save Button -->
 
     <EditText
-        android:id="@+id/descriptionEditText"
+        android:id="@+id/editDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -121,7 +133,7 @@
         app:layout_constraintTop_toBottomOf="@+id/difficultyLabel" />
 
     <EditText
-        android:id="@+id/gearEditText2"
+        android:id="@+id/editGear"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -131,38 +143,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/editDescription" />
 
     <Button
-        android:id="@+id/saveButton"
-        android:layout_width="97dp"
+        android:id="@+id/updateButton"
+        android:layout_width="110dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
-        android:text="Save"
+        android:layout_marginTop="28dp"
+        android:text="UPDATE"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.525"
+        app:layout_constraintHorizontal_bias="0.802"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gearEditText2" />
+        app:layout_constraintTop_toBottomOf="@+id/editGear" />
 
     <Button
-        android:id="@+id/imgButton2"
-        android:layout_width="97dp"
+        android:id="@+id/deleteButton"
+        android:layout_width="110dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
-        android:text="IMAGE"
+        android:layout_marginTop="28dp"
+        android:text="DELETE"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintHorizontal_bias="0.203"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gearEditText2" />
-
-    <Button
-        android:id="@+id/viewButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:text="View"
-        app:layout_constraintStart_toEndOf="@+id/saveButton"
-        app:layout_constraintTop_toTopOf="@+id/saveButton" />
+        app:layout_constraintTop_toBottomOf="@+id/editGear" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
@@ -173,8 +176,8 @@
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.967"
-        app:layout_constraintStart_toEndOf="@+id/dateEditText"
-        app:layout_constraintTop_toTopOf="@+id/dateEditText"
+        app:layout_constraintStart_toEndOf="@+id/editDate"
+        app:layout_constraintTop_toTopOf="@+id/editDate"
         app:srcCompat="@drawable/date" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -184,8 +187,8 @@
         android:layout_marginEnd="176dp"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/timeEditText"
-        app:layout_constraintTop_toTopOf="@+id/timeEditText"
+        app:layout_constraintStart_toEndOf="@+id/editTime"
+        app:layout_constraintTop_toTopOf="@+id/editTime"
         app:srcCompat="@drawable/time" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -195,7 +198,6 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <RadioGroup
         android:layout_width="134dp"
         android:layout_height="46dp"
@@ -204,7 +206,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.855"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lengthEditText">
+        app:layout_constraintTop_toBottomOf="@+id/editLength">
         <RadioButton
             android:id="@+id/yesRadioButton"
             android:layout_width="wrap_content"
@@ -228,7 +230,7 @@
         android:id="@+id/titleText"
         android:layout_width="62dp"
         android:layout_height="24dp"
-        android:text="ADD"
+        android:text="EDIT"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -236,8 +238,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.022" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
