--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Hike Name -->
     <EditText
         android:id="@+id/hikeNameEditText"
         android:layout_width="0dp"
@@ -19,6 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
+    <!-- Location -->
     <EditText
         android:id="@+id/locationEditText"
         android:layout_width="0dp"
@@ -33,6 +36,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hikeNameEditText" />
 
+    <!-- Date -->
     <EditText
         android:id="@+id/dateEditText"
         android:layout_width="240dp"
@@ -45,6 +49,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/locationEditText" />
 
+    <!-- Time -->
     <EditText
         android:id="@+id/timeEditText"
         android:layout_width="130dp"
@@ -56,6 +61,7 @@
         app:layout_constraintStart_toStartOf="@+id/dateEditText"
         app:layout_constraintTop_toBottomOf="@+id/dateEditText" />
 
+    <!-- Days -->
     <EditText
         android:id="@+id/numberOfDaysEditText"
         android:layout_width="130dp"
@@ -65,6 +71,7 @@
         app:layout_constraintEnd_toEndOf="@+id/locationEditText"
         app:layout_constraintTop_toTopOf="@+id/timeEditText" />
 
+    <!-- Length -->
     <EditText
         android:id="@+id/lengthEditText"
         android:layout_width="372dp"
@@ -74,6 +81,7 @@
         app:layout_constraintStart_toStartOf="@+id/timeEditText"
         app:layout_constraintTop_toBottomOf="@+id/timeEditText" />
 
+    <!-- Parking Label -->
     <TextView
         android:id="@+id/parkingLabel"
         android:layout_width="wrap_content"
@@ -84,6 +92,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lengthEditText" />
 
+    <!-- Difficulty Label -->
     <TextView
         android:id="@+id/difficultyLabel"
         android:layout_width="188dp"
@@ -94,6 +103,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/parkingLabel" />
 
+    <!-- Difficulty Spinner -->
     <Spinner
         android:id="@+id/difficultySpinner"
         android:layout_width="155dp"
@@ -105,8 +115,7 @@
         app:layout_constraintStart_toEndOf="@+id/difficultyLabel"
         app:layout_constraintTop_toTopOf="@+id/difficultyLabel" />
 
-    <!-- Save Button -->
-
+    <!-- Description -->
     <EditText
         android:id="@+id/descriptionEditText"
         android:layout_width="0dp"
@@ -120,6 +129,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/difficultyLabel" />
 
+    <!-- Gear -->
     <EditText
         android:id="@+id/gearEditText2"
         android:layout_width="0dp"
@@ -133,6 +143,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />
 
+    <!-- Save Button -->
     <Button
         android:id="@+id/saveButton"
         android:layout_width="97dp"
@@ -144,6 +155,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gearEditText2" />
 
+    <!-- Image Button -->
     <Button
         android:id="@+id/imgButton2"
         android:layout_width="97dp"
@@ -155,6 +167,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gearEditText2" />
 
+    <!-- View Button -->
     <Button
         android:id="@+id/viewButton"
         android:layout_width="wrap_content"
@@ -164,6 +177,7 @@
         app:layout_constraintStart_toEndOf="@+id/saveButton"
         app:layout_constraintTop_toTopOf="@+id/saveButton" />
 
+    <!-- Date FloatingActionButton -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
@@ -177,6 +191,7 @@
         app:layout_constraintTop_toTopOf="@+id/dateEditText"
         app:srcCompat="@drawable/date" />
 
+    <!-- Time FloatingActionButton -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton2"
         android:layout_width="wrap_content"
@@ -188,14 +203,7 @@
         app:layout_constraintTop_toTopOf="@+id/timeEditText"
         app:srcCompat="@drawable/time" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
+    <!-- Radio Buttons -->
     <RadioGroup
         android:layout_width="134dp"
         android:layout_height="46dp"
@@ -205,6 +213,8 @@
         app:layout_constraintHorizontal_bias="0.855"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lengthEditText">
+
+        <!-- Yes RadioButton -->
         <RadioButton
             android:id="@+id/yesRadioButton"
             android:layout_width="wrap_content"
@@ -212,6 +222,8 @@
             android:text="Yes"
             app:layout_constraintStart_toEndOf="@+id/noRadioButton"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- No RadioButton -->
         <RadioButton
             android:id="@+id/noRadioButton"
             android:layout_width="wrap_content"
@@ -220,10 +232,9 @@
             android:text="No"
             app:layout_constraintEnd_toStartOf="@+id/yesRadioButton"
             app:layout_constraintTop_toTopOf="parent" />
-
-
     </RadioGroup>
 
+    <!--Title text-->
     <TextView
         android:id="@+id/titleText"
         android:layout_width="62dp"
@@ -236,8 +247,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.022" />
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
