--- a/app/src/main/res/layout/activity_view_hike.xml
+++ b/app/src/main/res/layout/activity_view_hike.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ViewActivity">
 
     <!-- SearchView -->
-    <SearchView
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:queryHint="Search Hikes"
-        android:iconifiedByDefault="false"
-        android:layout_margin="16dp"
-        android:layout_alignParentTop="true" />
+        android:layout_width="403dp"
+        android:layout_height="67dp"
+        android:background="@drawable/search_view_bg"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:queryHint="Search name hike"
+        app:iconifiedByDefault="false">
+    </androidx.appcompat.widget.SearchView>
 
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
@@ -22,7 +26,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/searchView"
-        android:layout_marginTop="8dp">
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_marginTop="8dp"></androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
