--- a/app/src/main/res/layout/activity_add_observation.xml
+++ b/app/src/main/res/layout/activity_add_observation.xml
@@ -4,18 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddObservation">
+    tools:context=".activity.AddObservationActivity">
 
-    <ImageView
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/timeObservation"
+        app:srcCompat="@drawable/time" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="200dp"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/dateObservation"
+        app:srcCompat="@drawable/date" />
+
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageView"
-        android:layout_width="163dp"
-        android:layout_height="165dp"
+        android:layout_width="252dp"
+        android:layout_height="254dp"
+        android:layout_marginTop="60dp"
+        android:background="@color/purple_200"
         android:contentDescription="Captured Image"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/present"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.107" />
+        app:layout_constraintTop_toBottomOf="@+id/titleText"
+        app:shapeAppearanceOverlay="@style/circular"
+        app:strokeColor="@color/white"
+        app:strokeWidth="2dp" />
 
     <ImageButton
         android:id="@+id/buttonCapture"
@@ -33,8 +57,8 @@
 
     <EditText
         android:id="@+id/dateObservation"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
+        android:layout_width="140dp"
+        android:layout_height="51dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
         android:hint="Date"
@@ -42,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonCapture" />
 
     <EditText
-        android:id="@+id/commentObservation3"
+        android:id="@+id/commentObservation"
         android:layout_width="293dp"
         android:layout_height="59dp"
         android:layout_marginTop="128dp"
@@ -54,15 +78,14 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/timeObservation2"
-        android:layout_width="150dp"
+        android:id="@+id/timeObservation"
+        android:layout_width="100dp"
         android:layout_height="55dp"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="96dp"
         android:hint="Time"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCapture"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/buttonCapture" />
 
     <Button
         android:id="@+id/saveObservation"
@@ -72,7 +95,7 @@
         android:layout_marginEnd="252dp"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commentObservation3" />
+        app:layout_constraintTop_toBottomOf="@+id/commentObservation" />
 
     <Button
         android:id="@+id/viewObservation"
@@ -82,7 +105,7 @@
         android:layout_marginEnd="64dp"
         android:text="View"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commentObservation3" />
+        app:layout_constraintTop_toBottomOf="@+id/commentObservation" />
     <TextView
         android:id="@+id/titleText"
         android:layout_width="200dp"
